# 86Box

./: CMakeLists.txt  CMakePresets.json  build.cmd  vcpkg.json
.ci/: Jenkinsfile  build.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: codeql_windows_msys2.yml
debian/: changelog  control  rules
doc/: Feature Removal for 86box Jensen hu.txt  lol.xlsx
doc/nvidia_notes/: Memory map (RIVA 128).txt
src/: 86box.c  CMakeLists.txt  acpi.c  config.c  fifo.c  gdbstub.c  ini.c  io.c  machine_status.c  nvr_at.c  pci_dummy.c  pic.c  pit_fast.c  port_6x.c  qt_resources.qrc  random.c  usb.c  vnc.c
src/cdrom/: CMakeLists.txt  cdrom.c
src/chipset/: CMakeLists.txt  ali1531.c  ali1541.c  ali1543.c  intel_4x0.c  intel_82335.c  intel_i450kx.c  intel_piix.c  intel_sio.c  opti822.c  sis_5511_h2p.c  sis_5513_p2i.c  sis_5571_h2p.c  sis_5591_h2p.c  sis_5600_h2p.c  sis_85c496.c  via_apollo.c  vl82c480.c
src/codegen_new/: CMakeLists.txt  codegen.c  codegen_accumulate.c  codegen_allocator.h  codegen_backend.h  codegen_backend_x86-64.c  codegen_backend_x86-64_ops.c  codegen_backend_x86-64_ops_helpers.h  codegen_backend_x86-64_ops_sse.c  codegen_backend_x86-64_uops.c  codegen_backend_x86.c  codegen_block.c  codegen_ir.c  codegen_ops.c  codegen_ops.h  codegen_ops_3dnow.c  codegen_ops_arith.c  codegen_ops_branch.c  codegen_ops_fpu_arith.c  codegen_ops_fpu_constant.c  codegen_ops_fpu_loadstore.c  codegen_ops_fpu_misc.c  codegen_ops_helpers.c  codegen_ops_jump.c  codegen_ops_logic.c  codegen_ops_misc.c  codegen_ops_mmx_arith.c  codegen_ops_mmx_cmp.c  codegen_ops_mmx_loadstore.c  codegen_ops_mmx_logic.c  codegen_ops_mmx_pack.c  codegen_ops_mmx_shift.c  codegen_ops_mov.c  codegen_ops_shift.c  codegen_ops_stack.c  codegen_reg.c  codegen_reg.h
src/cpu/: 386.c  386_common.c  386_dynarec.c  386_dynarec_ops.c  386_ops.h  808x.c  CMakeLists.txt  codegen_public.h  codegen_timing_pentium.c  codegen_timing_winchip2.c  cpu.c  cpu.h  cpu_table.c  x86.c  x86_flags.h  x86_ops.h  x86_ops_call.h  x86_ops_flag.h  x86_ops_flag_2386.h  x86_ops_fpu.h  x86_ops_fpu_2386.h  x86_ops_mmx_mov.h  x86_ops_mov_ctrl.h  x86_ops_mov_ctrl_2386.h  x86_ops_ret.h  x86_ops_ret_2386.h  x86_ops_shift.h  x86seg.c  x86seg.h  x87.c  x87.h  x87_ops.h  x87_ops_misc.h  x87_ops_sf_trans.h
src/device/: CMakeLists.txt  clock_ics9xxx.c  isamem.c  isartc.c  kbc_at.c  kbc_at_dev.c  keyboard.c  keyboard_xt.c  mouse.c  mouse_serial.c  mouse_wacom_tablet.c  pci_bridge.c  serial.c  serial_passthrough.c
src/disk/: CMakeLists.txt  hdc.c  hdc_ide_cmd640.c  hdc_ide_cmd646.c  hdc_ide_sff8038i.c  hdc_ide_w83769f.c  hdc_st506_xt.c  hdc_xta.c  hdd_image.c  mo.c  zip.c
src/floppy/: CMakeLists.txt  fdc.c  fdc_monster.c  fdd.c  fdd_86f.c  fdd_fdi.c  fdd_imd.c  fdd_img.c  fdi2raw.c
src/machine/: CMakeLists.txt  m_amstrad.c  m_at.c  m_at_286_386sx.c  m_at_386dx_486.c  m_at_slot1.c  m_at_slot2.c  m_at_socket370.c  m_at_socket4.c  m_at_socket5.c  m_at_socket7.c  m_at_socket7_3v.c  m_at_socket8.c  m_at_sockets7.c  m_europc.c  m_ps1.c  m_ps1_hdc.c  m_ps2_isa.c  m_ps2_mca.c  m_xt.c  m_xt_t1000.c  machine.c  machine_table.c
src/mem/: intel_flash.c  mem.c  mmu_2386.c  rom.c  (+2 more)
src/video2/: CMakeLists.txt  agpgart.c  video.c  video_conversion.c  video_core.c  video_table.c
(+191 files in other folders)
